# SR_FUXI

./: fuxi.py  fuxi_net.py  train_geoalign_lossflex.py
SR_surface/: .gitignore  COMPLETION_REPORT.md  GETTING_STARTED.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  STRUCTURE.md  demo.ipynb  main.py  pyproject.toml  requirements.txt
SR_surface/configs/: surface_sr.yaml
SR_surface/mindearth/: __init__.py
SR_surface/mindearth/cell/: __init__.py
SR_surface/mindearth/core/: __init__.py
SR_surface/mindearth/module/: __init__.py
SR_surface/mindearth/utils/: __init__.py
SR_surface/scripts/: eval.py  inference.py  run_distributed_train.sh  run_standalone_train.sh
SR_surface/src/: __init__.py  config.py  data.py  eval.py  surface_sr.py  surface_sr_net.py  utils.py
fuxi_LZH/scripts/: preprocess_ocean_data.py
